[gd_scene load_steps=2 format=3 uid="uid://bdtmkaipq64uu"]

[ext_resource type="Script" path="res://minigame/end_level.gd" id="1_bav7l"]

[node name="EndLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bav7l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0707611, 0.0986942, 0.133648, 1)

[node name="ComplimentLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.23112
anchor_right = 0.5
anchor_bottom = 0.23112
offset_left = -362.5
offset_top = -90.0
offset_right = 362.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 131
text = "Good work!"
metadata/_edit_use_anchors_ = true

[node name="GradeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.545898
anchor_right = 0.5
anchor_bottom = 0.545898
offset_left = -370.0
offset_top = -173.5
offset_right = 370.0
offset_bottom = 173.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 126
text = "Score: 10/10
Grade: C-"
metadata/_edit_use_anchors_ = true

[node name="PlayAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 77.0
offset_top = -186.0
offset_right = 482.0
offset_bottom = -67.0
grow_vertical = 0
theme_override_font_sizes/font_size = 81
text = "Play again"

[node name="ReturnMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -698.0
offset_top = -186.0
offset_right = -72.0
offset_bottom = -67.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 81
text = "Return to menu"

[connection signal="button_down" from="PlayAgain" to="." method="_on_play_again_button_down"]
[connection signal="button_down" from="ReturnMenu" to="." method="_on_return_menu_button_down"]
